--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
 <body>
   <header>
     <div class="logo">My Portfolio</div>
-    <nav>
-      <a href="index.html" class="active">Profile</a>
-      <a href="objective.html">Objective</a>
-      <a href="education.html">Education</a>
-      <a href="experience.html">Experience</a>
-      <a href="certifications.html">Certifications</a>
-      <a href="projects.html">Projects</a>
-      <a href="skills.html">Skills</a>
-    </nav>
+     <!-- Hamburger Menu -->
+     <div class="menu">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+  
+        <!-- Dropdown Links -->
+        <ul class="dropdown">
+          <li><a href="objective.html">Objective</a></li>
+          <li><a href="education.html">Education</a></li>
+          <li><a href="experience.html">Experience</a></li>
+          <li><a href="certifications.html">Certifications</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="skills.html">Skills</a></li>
+          
+        </ul>
+      </div>
   </header>
 
   <main class="container">
